--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-pandas
-numpy
-matplotlib
-statsmodels
-openpyxl
-plotly
-seaborn
-st-aggrid
+streamlit==1.19.0
+pandas==1.5.3
+numpy==1.23.3
+matplotlib==3.6.0
+statsmodels==0.13.2
+openpyxl==3.0.10
+plotly==5.11.0
+seaborn==0.11.2
+st-aggrid==0.3.4
